manifest/overprovisioning.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overprovisioning
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overprovisioning-autoscaler
  namespace: overprovisioning
  labels:
    app: overprovisioning-autoscaler
spec:
  selector:
    matchLabels:
      app: overprovisioning-autoscaler
  replicas: 1
  template:
    metadata:
      labels:
        app: overprovisioning-autoscaler
    spec:
      nodeSelector:
          karpenter: "true"
      tolerations:
      - key: "kubernetes.io/karpenter-taint"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - image: gcr.io/google_containers/cluster-proportional-autoscaler-amd64:1.7.1
          name: autoscaler
          command:
            - ./cluster-proportional-autoscaler
            - --namespace=overprovisioning
            - --configmap=overprovisioning-autoscaler
            - --target=deployment/overprovisioning
            - --logtostderr=true
            - --v=2
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
      serviceAccountName: cluster-proportional-autoscaler-service-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overprovisioning
  namespace: overprovisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      run: overprovisioning
  template:
    metadata:
      labels:
        run: overprovisioning
    spec:
      priorityClassName: overprovisioning
      nodeSelector:
          karpenter: "true"
      tolerations:
      - key: "kubernetes.io/karpenter-taint"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: reserve-resources
        image: k8s.gcr.io/pause
        resources:
          requests:
            cpu: 7
