manifest/supermario-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermario-deployment
  namespace: supermario
  labels:
    app: supermario
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:    
      maxUnavailable: 50%
      # maxSurge: "100%"
  selector:
    matchLabels:
      app: supermario
  template:
    metadata:
      labels:
        app: supermario
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: supermario
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: eks/nodegroup-name
                operator: In
                values:
                - ng_app_managed
          - weight: 1
            preference:
              matchExpressions:
              - key: karpenter
                operator: In
                values:
                - "true"
      tolerations:
      - key: "kubernetes.io/karpenter-taint"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "dedicated"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
      containers:
      - name: supermario
        image: 652839185683.dkr.ecr.us-east-1.amazonaws.com/supermario:2022-08-17.11.18.46-f5d8a
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "126Mi"
            cpu: 50m
          limits:
            memory: "126Mi"
            cpu: 50m
