manifest/supermario-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario-svc
  namespace: default
spec:
  selector:
    app: supermario
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermario-ingress
  labels:
    app: supermario
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-0fdf30350615de9fe
    alb.ingress.kubernetes.io/subnets: subnet-0ddc4f7c145777848,subnet-0dee11d27220bb338,subnet-0efae4e6efd448e41
    alb.ingress.kubernetes.io/healthcheck-path: /
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:sa-east-1:652839185683:certificate/f1d23004-9380-47c1-a6e7-f9b4940c7fb4
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service: 
                name: supermario-svc
                port:
                  number: 8080
