manifest/supermario-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario-svc
  namespace: supermario
spec:
  selector:
    app: supermario
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermario-ingress
  namespace: supermario
  labels:
    app: supermario
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-01766d2310020e073
    alb.ingress.kubernetes.io/subnets: subnet-0cd088687059d4739,subnet-04e5377f6de7cc2de,subnet-079b67bb8248e0882
    alb.ingress.kubernetes.io/healthcheck-path: /
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:sa-east-1:652839185683:certificate/f1d23004-9380-47c1-a6e7-f9b4940c7fb4
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service: 
                name: supermario-svc
                port:
                  number: 8080
